--- a/src/main/resources/templates/user/bas.html
+++ b/src/main/resources/templates/user/bas.html
@@ -52,7 +52,7 @@
     <a href="" th:href="@{/user/index}" class="item"><i class="fa-solid fa-house-chimney"></i> Home</a>
     <a href="" th:href="@{/user/show-contacts/0}" class="item"> <i class="fa-solid fa-address-book"></i> View Contacts</a>
     <a href="" th:href="@{/user/add-contact}" class="item"> <i class="fa-solid fa-user-plus"></i> Add Contacts</a>
-    <a href="" class="item"> <i class="fa-solid fa-user"></i> Profile</a>
+    <a href="" th:href="@{/user/profile}" class="item"> <i class="fa-solid fa-user"></i> Profile</a>
     <a href="" class="item"> <i class="fa-solid fa-gears"></i> Settings</a>
     <a href="" th:href="@{/logout}" class="item"> <i class="fa-solid fa-right-from-bracket"></i> Logout</a>
     <div class="divider"></div>
@@ -73,5 +73,26 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+<script>
+    function deleteContact(cId,currentPage){
+        swal({
+            title: "Are you sure?",
+            text: "Once deleted, you will not be able to recover this Contact!",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+        })
+            .then((willDelete) => {
+                if (willDelete) {
+                    window.location="/user/delete/"+currentPage+"/"+cId;
+                } else {
+                    swal("Your Contact Not Deleted !!");
+                }
+            });
+    }
+
+</script>
 </body>
 </html>
